Update to use threadFactory which can be easily switched between platform threads and virtual threads